welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: value r is not a member of Boolean
	if(!estFaceMur()r){
                        ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(!estFaceMur()r){
        ^