welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	if(!estFaceMur()r){
		avance();
	    if(getCouleurSol()==java.awt.Color.green){
	    	 recule();
	    	return true ;
	    }else {return false ;}

	}
}

